@startuml
title Comment Model's status

state Manageable {
  ' Unpublished : 未公開
  Published   : 公開中
  Submitted   : 提出済み
  Rejected    : 拒否
  ' Logged   : 過去ログ化
}
note right of Manageable
 TopicがPublishedでのみ変更可能
end note

' state Abnormal{
  ' Banned  : Admin banned comment
  Removed : Deleted comment.
  Removed : reason stored other column.
' }

[*]      -down-> Published : [U/G]コメントの作成
[*]      -down-> Submitted : [U/G]コメントの作成
' Published   --> Unpublished : [U]
Submitted   -right-> Published : [O]
Submitted   -down-> Rejected : [O]
Rejected   --> Submitted : [U]
' Published   --> Logged : [S]

Published --> Removed : [A/U/O]
' Normal --> Removed : [A/U/O]

legend
- S : System
- A : Server Admin
- O : Owner
- U : User
- G : Guest
end legend


@end